<!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<resources>
    <string name="app_name">Just eat</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <string name="search">Search</string>
    <string name="filter">Filter</string>


    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Check internet connection!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="appName">Just eat!</string>
    <string name="login_dummy">Log in</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <!--Registration-->
    <string name="register">Register</string>
    <string name="registration">Sign up</string>
    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>


    <string name="not_matching_password">Passwords do not match.</string>
    <string name="empty_name">Please provide a non empty name.</string>
    <string name="empty_lastname">Please provide a non empty last name.</string>
    <string name="empty_username">Please provide a non empty username.</string>


    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>


    <!--about fragment-->
    <string name="project_info">This is our app. Copyright Fleka od Dzeka ;)</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <!--<string name="rate_us">Rate Us</string>-->
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--User Restaurants-->
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="map">Map</string>


    <!--User Restaurant-->
    <string name="details">Details</string>
    <string name="rating">Rating</string>
    <string name="restaurant_menu">Menu</string>
    <string name="daily_menu">Daily Menu</string>
    <string name="promotions">Promotions</string>

    <!--Milan dodao-->
    <!--Promotion details-->
    <string name="price">Price</string>
    <string name="duration">Duration</string>


    <!--Vlada dodao-->
    <!--Restaurant details-->
    <string name="delivery">Delivery:</string>
    <string name="phone">Phone:</string>
    <string name="work_time">Work Time:</string>
    <string name="email_restaurant">E-mail:</string>
    <string name="how_to_find_us">How To Find Us</string>

    <string name="kitchens">Kitchens:</string>
    <string name="bullet">•</string>

    <string name="restaurant_rating">Rating:</string>
    <string name="rate_us">Rate Us </string>
    <string name="comment_us">Leave Your Comment Here</string>
    <string name="leave_comment">Comment</string>
    <string name="comments">Comments</string>

    <string name="filterDistanceString">Distance (km)</string>
    <string name="cancelBtn">Cancel</string>
    <string name="submitBtn">Submit</string>
    <string name="kitchen">Kitchen</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="description">Description:</string>
    <string name="price_colon">Price:</string>
    <string name="nutritive_values">Nutritive Values:</string>
    <string name="eat_me">Eat me</string>


    <!--Daily menu-->
    <string name="time_format">HH:mm</string>
    <string name="dishes">Dishes:</string>
    <string name="title_activity_pokusaj_maps">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="settings">Settings</string>
    <string name="myProfile">My Profile</string>
    <string name="restaurants">Restaurants</string>
    <string name="my_restaurants">My Restaurants</string>
    <string name="notifications">Notifications</string>

    <string name="subscriptions">Subscriptions</string>

    <string name="pref_dark_theme_key">pref_dark_theme</string>
    <string name="pref_appearance_group_title">Appearance</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_dark_theme_summary">This is good to use in environments with low light
    conditions.</string>

    <string name="pref_save_network_data_key">pref_save_network_data</string>
    <string name="pref_network_data_usage_group_title">Network Data Usage</string>
    <string name="pref_save_network_data_usage_title">Save Network Data</string>
    <string name="pref_save_network_data_usage_summary">When using mobile data, this
        option should be turn on in order to save network data. Consumption of network data
    is minimized by ignoring images that should be download for each entity.</string>


    <string name="pref_notifications_key">pref_notifications</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_summary">You can turn off notifications if they are
        too distracting. Also, some network data would be saved.</string>


    <string name="pref_language_key">pref_language</string>
    <string name="pref_languages_group_title">Languages</string>
    <string name="pref_languages_title">Choose Language</string>
    <string name="pref_languages_summary">There are few predefined languages which you
        can set as default for this application.</string>

    <string-array name="pref_language_entries">
        <item>Српски (ћирилица)</item>
        <item>Srpski (latinica)</item>
        <item>English</item>
        <item>Italian</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="pref_languages_values">
        <item>cir</item>
        <item>sr</item>
        <item>en</item>
        <item>it</item>
        <item>es</item>
    </string-array>

    <string name="pref_language_default_value">en</string>

    <string name="dish_type">Dish Type</string>

    <!--Manager-->
    <string name="cook">Cook</string>
    <string name="insert_promotion_title">Insert promotion title</string>
    <string name="insert_promotion_subtitle">Insert promotion subtitle</string>
    <string name="insert_promotion_details">Insert promotion details</string>
    <string name="insert_promotion_price">Insert promotion price</string>
    <string name="insert_promotion_duration">Insert promotion duration</string>

    <string name="dish">Dish</string>
    <string name="nutritive_value">Nutritive Value</string>


    <string name="here_you_are">Here you are.</string>

    <string name="work_time_active_restaurant">Open</string>
    <string name="delivery_txt_user_preferences">Delivery</string>
    <string name="delivery_user_preferences_txt">Daily Menu</string>

    <string-array name="nutrition_values">
        <item>Kalorijska vrednost</item>
        <item>Masti</item>
        <item>Proteini</item>
        <item>Ugljeni hidrati</item>
    </string-array>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeated_password">Repeated Password</string>
    <string name="change_password">Change</string>

    <string name="save_btn">Save</string>

    <string name="update_details_btn">Update Info</string>
    <string name="change_password_btn">Change Password</string>

    <string name="my_profile_label">My Profile</string>

</resources>
