<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_appearance_group_title">
        <SwitchPreference
            android:defaultValue="false"
            android:textColor="@color/blue_grey_light"
            android:key="@string/pref_dark_theme_key"
            android:summary="@string/pref_dark_theme_summary"
            android:title="@string/pref_dark_theme_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_network_data_usage_group_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_save_network_data"
            android:summary="@string/pref_save_network_data_usage_summary"
            android:title="@string/pref_save_network_data_usage_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:textColor="@color/blue_grey_light"
            android:key="@string/pref_notifications_key"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications_title" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_languages_group_title">

        <ListPreference
            android:defaultValue="@string/pref_language_default_value"
            android:entries="@array/pref_language_entries"

            android:entryValues="@array/pref_languages_values"
            android:textColor="@color/blue_grey_light"
            android:key="@string/pref_language_key"
            android:summary="@string/pref_languages_summary"
            android:title="@string/pref_languages_title" />

    </PreferenceCategory>

</PreferenceScreen>