<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_color_back"
    tools:context=".ui.manager.restaurant.promotions.details.ManagerRestaurantPromotionDetailsActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/promotion_details_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/login_bg" />


                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#BCBCBC"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="257dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0">

                            <EditText
                                android:id="@+id/promotion_details_title_text_edit"
                                style="@style/TextStyle.Title"
                                android:layout_width="256dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|top"
                                android:hint="@string/insert_promotion_title"
                                android:textAlignment="center"
                                android:textAllCaps="true"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/promotion_details_subtitle_text_edit"
                                style="@style/TextStyle.Title.Sub"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|top"
                                android:hint="@string/insert_promotion_subtitle"
                                android:textAlignment="center"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <!--Promotion details-->
                <TextView
                    android:id="@+id/promotion_details_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/details"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/promotion_details_text_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/insert_promotion_details"
                    android:lines="3"
                    android:maxLines="3"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/promotion_details_text_view"
                    app:layout_constraintStart_toEndOf="@+id/promotion_details_text_view" />


                <!--Price-->
                <TextView
                    android:id="@+id/promotion_price_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/price"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/promotion_details_text_edit" />

                <EditText
                    android:id="@+id/promotion_price_text_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/insert_promotion_price"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/promotion_price_text_view"
                    app:layout_constraintStart_toEndOf="@+id/promotion_price_text_view" />


                <!--Duration-->
                <TextView
                    android:id="@+id/promotion_duration_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/duration"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/promotion_price_text_edit" />

                <EditText
                    android:id="@+id/promotion_duration_text_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/insert_promotion_duration"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/promotion_duration_text_view"
                    app:layout_constraintStart_toEndOf="@+id/promotion_duration_text_view" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom|center">


                <Button
                    android:id="@+id/submit_promotion_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submitBtn"
                    android:background="@color/logo_color"
                    />

                <Button
                    android:id="@+id/cancel_promotion_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelBtn"
                    android:background="@color/logo_color"

                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>